-----------------
2018-05-05 3.5.0rc2
-----------------

* Fixed the packaging problem where the stdlib python3_redirect shim is
  supposed to be installed on Python 3.
* Renamed _posixsubprocess to _posixsubprocess32 for consistency.

-----------------
2017-10-18 3.5.0rc1
-----------------

* Backport the new subprocess.run() API from Python 3.5.
* Backport subprocess.DEVNULL support from 3.3.
* Allow stderr to be redirected to stdout even when stdout is not redirected.
  https://bugs.python.org/issue22274 
* Fix subprocess.Popen.wait() when the child process has exited to a
  a stopped instead of terminated state (ex: when under ptrace).
  https://bugs.python.org/issue29335 
* Include the private API needed by the multiprocessing module for people who
  want to drop subprocess32 in as a replacement for their standard library
  subprocess module.
* Fix a compilation issue regarding O_CLOEXEC not being defined on ancient
  Linux distros such as RHEL 5.

-----------------
2015-11-15 3.2.7
-----------------

* Issue #6973: When we know a subprocess.Popen process has died, do
  not allow the send_signal(), terminate(), or kill() methods to do
  anything as they could potentially signal a different process.
* Issue #23564: Fixed a partially broken sanity check in the _posixsubprocess
  internals regarding how fds_to_pass were passed to the child.  The bug had
  no actual impact as subprocess32.py already avoided it.

-----------------
2015-11-14 3.2.7rc2
-----------------

* Moved the repository from code.google.com to github.
* Added a _WAIT_TIMEOUT to satisfy the unsupported people entirely on
  their own trying to use this on Windows.
* Similarly: Updated setup.py to not build the extension on non-posix.

-----------------
2014-06-01 3.2.7rc1
-----------------

* Issue #21618: The subprocess module could fail to close open fds that were
  inherited by the calling process and already higher than POSIX resource