@@ -52,7 +52,7 @@ On Python 3, it merely redirects the subprocess32 name to subprocess.""",
       # We don't actually "support" 3.3+, we just allow installation there as
       # we install a stub redirecting to the standard library subprocess module
       # under the subprocess32 name.
-      python_requires='>=2.4, !=3.0.*, !=3.1.*, !=3.2.*, <4',
+      python_requires='>=2.6, !=3.0.*, !=3.1.*, !=3.2.*, <4',
 
       classifiers=[
           'Intended Audience :: Developers',
@@ -65,8 +65,6 @@ On Python 3, it merely redirects the subprocess32 name to subprocess.""",
           'Operating System :: POSIX :: BSD',
           'Operating System :: POSIX :: Linux',
           'Operating System :: POSIX :: SunOS/Solaris',
-          'Programming Language :: Python :: 2.4',
-          'Programming Language :: Python :: 2.5',
           'Programming Language :: Python :: 2.6',
           'Programming Language :: Python :: 2.7',
           'Programming Language :: Python :: 2 :: Only',
